[gd_scene load_steps=4 format=2]

[ext_resource path="res://item2.png" type="Texture" id=1]
[ext_resource path="res://RoomChanger.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9314, 80.8722 )

[node name="RoomChanger" type="Area2D"]
show_behind_parent = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 0.561241, 0 )
scale = Vector2( 0.860921, 5 )
texture = ExtResource( 1 )

[node name="PlayerSpawnPosition" type="Position2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_RoomChanger_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RoomChanger_body_exited"]
